Fixed unwanted button color change on tap on mobile (I hope)

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ h1 {
 }
 
 button {
+  -webkit-tap-highlight-color: transparent;
   border-radius: 8px;
   border: 1px solid grey;
   padding: 0.6em 1.2em;
